# BlockPlot

./: .gitignore  Cargo.toml  README.md  diesel.toml
.github/workflows/: audit-on-push.yaml  general.yml
backend/: Cargo.toml
backend/.github/workflows/: general.yml  scheduled-audit.yml
backend/configuration/: auth.toml  base.yaml
backend/src/: configuration.rs  lib.rs
backend/src/auth/: auth0.rs  mod.rs
backend/src/db/: mod.rs  models.rs  operations.rs  schema.rs
backend/src/routes/: authentication.rs  health.rs  index.rs  mod.rs  skillblocks.rs
backend/templates/: base.html.tera
backend/templates/error/: 401.html.tera
backend/tests/: health_check.rs
frontend/: Cargo.toml  index.html
frontend/pages/: user.rs
frontend/src/: api.rs  app.rs  main.rs  route.rs  types.rs
frontend/src/components/: mod.rs  navbar.rs
frontend/src/pages/: about.rs  create.rs  form.rs  home.rs  mod.rs  sign_in.rs  sign_up.rs  unauthorized.rs  user.rs
migrations/2020-11-12-161951_create_skillblocks/: up.sql
migrations/2020-12-17-054223_date_times/: down.sql  up.sql
migrations/2020-12-17-175145_delete_skillblock_table/: down.sql  up.sql
migrations/2020-12-17-182116_delete_users_table/: down.sql
migrations/2020-12-17-182723_create_users/: up.sql
migrations/2020-12-18-045317_create_skillblocks/: up.sql
migrations/2020-12-18-050952_create_datetimes/: up.sql
migrations/2020-12-19-094653_alter_users/: down.sql  up.sql
migrations/2020-12-19-224941_alter_skillblocks/: down.sql  up.sql
migrations/2020-12-19-231615_alter_date_times/: down.sql  up.sql
migrations/2020-12-31-200835_alter_date_time_date/: down.sql  up.sql
migrations/2020-12-31-202402_create_new_day_date_col/: up.sql
migrations/2021-06-30-095338_add_created_at/: down.sql  up.sql
migrations/2021-06-30-101614_add_last_login/: down.sql  up.sql
migrations/2021-07-04-063040_rename_last_login/: down.sql  up.sql
