[package]
name = "backend"
version = "0.1.0"
authors = ["MarkAnthonyM <MarkAnthonyMartinez9@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
diesel = { version = "1.4.5", features = ["postgres"] }
dotenv = "0.15.0"
reqwest = "0.10.9"
rocket = "0.4.5"
rocket_cors = { version = "0.5.2", default-features = false }
rusty-rescuetime = { path = "../../rusty-rescuetime" }
serde = { version = "1.0.116", features = ["derive"] }

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["json", "diesel_postgres_pool"]