[package]
name = "backend"
version = "0.1.0"
authors = ["MarkAnthonyM <MarkAnthonyMartinez9@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.35"
chrono = "0.4.19"
dashmap = "3.11.10"
diesel = { version = "1.4.5", features = ["chrono", "postgres"] }
dotenv = "0.15.0"
jsonwebtoken = "7.2.0"
rand = "0.7.3"
reqwest = "0.10.9"
rocket = "0.4.5"
rocket_cors = { version = "0.5.2", default-features = false }
rusty-rescuetime = { path = "../../rusty-rescuetime" }
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.59"
tera = "1.6.1"
uuid = { version = "0.8.1", features = ["serde", "v4"] }

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["json", "diesel_postgres_pool"]