[package]
name = "frontend"
version = "0.1.0"
authors = ["MarkAnthonyM <MarkAnthonyMartinez9@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.33"
chrono = { version = "0.4.19", features = ["serde", "wasmbind"] }
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
ybc = "*"
yew = "0.17.3"