[package]
name = "frontend"
version = "0.1.0"
authors = ["MarkAnthonyM <MarkAnthonyMartinez9@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.33"
chrono = { version = "0.4.19", features = ["serde", "wasmbind"] }
num-traits = "0.2.14"
serde = { version = "1.0.117", features = ["derive"] }
ybc = "*"
yew = "0.17.3"
yew-router = "0.14.0"